# ai_reviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.ec2.yml  docker-compose.local.yml  pyproject.toml
.github/workflows/: ec2-deploy.yml
alembic/: env.py
alembic/versions/: 6d8ef3b69d21_add_github_oauth_tables.py  d659050b5ca8_initial_migration.py
app/: main.py
app/api/dependencies/: auth.py
app/api/routes/: __init__.py  auth.py  review.py  websocket.py
app/core/: config.py  crypto.py  database.py  dependencies.py  observability.py  rate_limiter.py  security.py  time.py
app/models/: github_auth.py  idea_lab.py  review_job.py  review_state.py
app/pipeline/: review_graph.py
app/schemas/: __init__.py  auth.py  idea_lab.py  report.py
app/services/: diff.py  evaluator.py  github_oauth.py  idea_lab.py  review_queue.py  review_state.py  review_worker.py
app/services/graphify/: extractor.py  watcher.py
app/utils/: file_handler.py
db/: schema.sql
prompts/: review_prompt.txt
script/: setup.py
tests/: conftest.py  test_auth.py  test_diff.py  test_evaluator_prompt.py  test_extractor.py  test_file_handler.py  test_github_oauth.py  test_idea_lab_schema.py  test_report_schema.py  test_review_graph.py  test_review_queue.py  test_review_state.py  test_review_worker.py
