[project]
name = "futurex-reviewer"
version = "0.1.0"
description = "FastAPI service that reviews GitHub projects against FutureX Idea Lab reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.0",
    "graphifyy>=0.8.37",
    "httpx>=0.27.0",
    "langgraph>=0.2.60",
    "openai>=2.41.1",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
